JumpScript/tests/baselines/reference/scannertest1.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(1,21): error TS6053: File 'tests/cases/conformance/scanner/ecmascript5/References.jump' not found.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(5,21): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(5,47): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(9,16): error TS2662: Cannot find name 'isDecimalDigit'. Did you mean the static member 'CharacterInfo.isDecimalDigit'?
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(10,22): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(10,47): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(11,22): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(11,47): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(15,9): error TS2304: Cannot find name 'Debug'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(15,22): error TS2662: Cannot find name 'isHexDigit'. Did you mean the static member 'CharacterInfo.isHexDigit'?
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(16,16): error TS2662: Cannot find name 'isDecimalDigit'. Did you mean the static member 'CharacterInfo.isDecimalDigit'?
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(17,20): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(18,21): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(18,46): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(19,23): error TS2304: Cannot find name 'CharacterCodes'.
tests/cases/conformance/scanner/ecmascript5/scannertest1.jump(20,23): error TS2304: Cannot find name 'CharacterCodes'.


==== tests/cases/conformance/scanner/ecmascript5/scannertest1.jump (16 errors) ====
    ///<reference path='References.jump' />
                        ~~~~~~~~~~~~~
!!! error TS6053: File 'tests/cases/conformance/scanner/ecmascript5/References.jump' not found.
    
    class CharacterInfo {
        public static isDecimalDigit(c: number): boolean {
            return c >= CharacterCodes._0 && c <= CharacterCodes._9;
                        ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                  ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
        }
    
        public static isHexDigit(c: number): boolean {
            return isDecimalDigit(c) ||
                   ~~~~~~~~~~~~~~
!!! error TS2662: Cannot find name 'isDecimalDigit'. Did you mean the static member 'CharacterInfo.isDecimalDigit'?
                   (c >= CharacterCodes.A && c <= CharacterCodes.F) ||
                         ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                  ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                   (c >= CharacterCodes.a && c <= CharacterCodes.f);
                         ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                  ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
        }
    
        public static hexValue(c: number): number {
            Debug.assert(isHexDigit(c));
            ~~~~~
!!! error TS2304: Cannot find name 'Debug'.
                         ~~~~~~~~~~
!!! error TS2662: Cannot find name 'isHexDigit'. Did you mean the static member 'CharacterInfo.isHexDigit'?
            return isDecimalDigit(c)
                   ~~~~~~~~~~~~~~
!!! error TS2662: Cannot find name 'isDecimalDigit'. Did you mean the static member 'CharacterInfo.isDecimalDigit'?
                ? (c - CharacterCodes._0)
                       ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                : (c >= CharacterCodes.A && c <= CharacterCodes.F)
                        ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                 ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                    ? c - CharacterCodes.A + 10
                          ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                    : c - CharacterCodes.a + 10;
                          ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
        }
    }
    
    